security: Add GitHub token and private files to .gitignore
CRITICAL SECURITY UPDATE:
- Block GitHub token files from being committed
- Hide user's private prototypes (N言語, 脳理解, ゴールデンチケット)
- Prevent accidental exposure of sensitive data

Protected files:
🔒 *token*.rtf, *token*.txt
🔒 github*.rtf
🔒 N言語.rtf, 脳理解.rtf, ゴールデンチケット.rtf
🔒 GITHUB_TOKEN*, .github-token

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,14 @@
 LEARNING_LOG.md
 AI_NOTES.md
 THINKING_PROCESS.md
+*RAG*.md
+*RAG*.rtf
+TNKos*.rtf
+
+# User's Private Documents & Prototypes
+N言語.rtf
+脳理解.rtf
+ゴールデンチケット.rtf
 
 # ============================================
 # IDE & Editor Settings (Private)
@@ -25,6 +33,13 @@ THINKING_PROCESS.md
 *.key
 *.pem
 credentials.json
+
+# GitHub Token (CRITICAL - NEVER COMMIT)
+*token*.rtf
+*token*.txt
+github*.rtf
+GITHUB_TOKEN*
+.github-token
 
 # ============================================
 # OS & System Files
